--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: gcwilkins # name of the site
-author: Riccardo Graziosi # name of site's author
-email: riccardo.graziosi97@gmail.com # email of site's author
-url: https://riggraz.dev # root address of the site
-baseurl: "cv-plain" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
+title: gcwilkins/cv # name of the site
+author: Guillermo Collado Wilkins # name of site's author
+email: hello@gcwilkins.com # email of site's author
+url: https://gcwilkins.github.io # root address of the site
+baseurl: "/cv-plain" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
-  A (nearly) no-CSS, fast, minimalist Jekyll theme.
+  gcwilkins' cv
 
 permalink: /:slug.html
 
@@ -15,10 +15,10 @@ remote_theme: riggraz/no-style-please # if you are using GitHub Pages, change it
 
 theme_config:
   appearance: "auto" # can be "light", "dark" or "auto"
-  back_home_text: ".." # customize text for homepage link in post layout
+  back_home_text: "«" # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
-  lowercase_titles: true # show titles in lowercase in lists
+  show_description: true # show blog description in home page
+  lowercase_titles: false # show titles in lowercase in lists
 
 sass:
   style: compressed
