--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,10 +4,10 @@
 entries:
   - title: info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
-      - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
+      - title: This is a test to host my CV online and avoid re-creating it all the time.
+      - title: "Download the <a href='https://gcwilkins.com/s/jcPd25DAWT7zL84'>PDF version</a>.
+      - title: Or just email me
+        url: mailto:hello@gcwilkins.com
 
   - title: all posts
     post_list:
