--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,8 +6,7 @@ entries:
     entries:
       - title: This is a test to host my CV online and avoid re-creating it all the time.
       - title: "Download the <a href='https://gcwilkins.com/s/jcPd25DAWT7zL84'>PDF version</a>.
-      - title: Or just email me
-        url: mailto:hello@gcwilkins.com
+      - title: Or just <a href='mailto:hello@gcwilkins.com'>email me</a>.
 
   - title: all posts
     post_list:
