--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@ entries:
   - title: info
     entries:
       - title: This is a test to host my CV online and avoid re-creating it all the time.
-      - title: "Download the <a href='https://gcwilkins.com/s/jcPd25DAWT7zL84'>PDF version</a>.
+      - title: "Download the <a href='https://gcwilkins.com/'>PDF version</a>.
       - title: Or just <a href='mailto:hello@gcwilkins.com'>email me</a>.
 
   - title: some tests
